# aip_cellule_flexible

./: README.md
Simulation_coppelia/: .gitignore  ProductConfiguration.config  README.md  checker.py  launch.sh
Simulation_coppelia/sim/: correctionFluide.ttt
aip_cellule_flexible/: CMakeLists.txt  package.xml
aip_cf_aiguillages/: CMakeLists.txt  package.xml
aip_cf_automates/: CMakeLists.txt  package.xml
aip_cf_automates/src/: API_schneider.cpp  API_schneider.h
aip_cf_commande/: CMakeLists.txt  package.xml
aip_cf_commande/src/: RobotsInterface.cpp  RobotsInterface.h  actionneurs.cpp  actionneurs.h  commande.cpp  commande.h
aip_cf_commande_locale/: CMakeLists.txt  package.xml
aip_cf_commande_locale/src/: LogManager.cpp  commande_locale.cpp  display.cpp  inOutController.cpp  inOutController.h  vrepController.cpp  vrepController.h
aip_cf_communication/: CMakeLists.txt  package.xml
aip_cf_communication/src/: communication.cpp  communication_API_schneider.h  communication_commande.h
aip_cf_launcher/: CMakeLists.txt  package.xml
aip_cf_launcher/launch/: launch_alpha.launch  launch_beta.launch
aip_cf_robots/: CMakeLists.txt  package.xml
aip_cf_robots/src/: Poste.h  Robot.cpp  Robot.h
aip_cf_shuttles/: CMakeLists.txt  package.xml
aip_cf_shuttles/src/: capteurs.cpp  capteurs.h  main_ShuttleManager.cpp
docker/: Dockerfile
