<package format="3">
  <name>aip_cellule_flexible</name>
  <version>0.0.1</version>
  <description>
    This metapackage provides the need packages to interact with the factory cell.
  </description>
  <maintainer email="marco@univ-tlse3.fr">Fabien Marco</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>
