<package format="3">
  <name>aip_cf_commande</name>
  <description>commande node</description>
  <maintainer email="projetlong.aip@gmail.com">Projet Long ENSEEIHT</maintainer>
  <version>4.0.0</version>
  <author>Projet Long N7 2017</author>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>aip_cf_robots</depend>
  <depend>aip_cf_commande_locale</depend>
  <depend>aip_cf_shuttles</depend>

  <depend>roscpp</depend>
  <depend>message_runtime</depend>

</package>
