<?xml version="1.0"?>
<package>
  <name>aip_cf_communication</name>
  <version>0.0.0</version>
  <description>The communication package</description>

  <maintainer email="etudiant@todo.todo">etudiant</maintainer>
  <license>BSD</license>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>aip_cf_automates</build_depend>
  <build_depend>aip_cf_commande_locale</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
