<?xml version="1.0"?>
<package format="3">
  <name>aip_cf_shuttles</name>
  <version>0.0.0</version>
  <description>The shuttles package</description>
  <maintainer email="projetlongAIP@gmail.com">Projet long ENSEEIHT</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>aip_cf_aiguillages</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>genmsg</depend>

  <depend>message_runtime</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
